--- a/src/locales/common/zh-CN.json
+++ b/src/locales/common/zh-CN.json
@@ -74,6 +74,7 @@
   "EachPage30": "每页30条",
   "EachPage50": "每页50条",
   "Create": "创建",
-  "KeywordSearch": "用户名/邮箱"
+  "KeywordSearch": "用户名/邮箱",
+  "Save": "保存"
 
 }
