--- a/src/locales/menu/zh-CN.json
+++ b/src/locales/menu/zh-CN.json
@@ -8,6 +8,7 @@
   "ERROR.PAGES": "错误页面",
   "ListTemplates": "列表模版",
   "Login": "登录",
+  "Logout": "退出登录",
   "Navigation": "站点导航",
   "PermissionManagement": "权限管理",
   "Print": "打印",
