--- a/src/locales/common/zh-CN.json
+++ b/src/locales/common/zh-CN.json
@@ -24,7 +24,7 @@
   "ENABLE.OR.NOT": "是否启用",
   "EXPORT": "导出",
   "FONT": "字体",
-  "GO.TO": "前往",
+  "Goto": "前往",
   "IMPORT": "导入",
   "IS.BUILTIN": "是否内置",
   "IS.ENABLED": "是否启用",
