--- a/src/locales/common/en-US.json
+++ b/src/locales/common/en-US.json
@@ -58,5 +58,6 @@
   "UPLOAD": "Upload",
   "VALUE": "Value",
   "VERIFY": "Verify",
-  "VERIFY.OR.NOT": "Verify or not"
+  "VERIFY.OR.NOT": "Verify or not",
+  "Read": "已阅"
 }
