--- a/src/locales/menu/zh-CN.json
+++ b/src/locales/menu/zh-CN.json
@@ -26,5 +26,6 @@
   "MenuManagement": "菜单管理",
   "NoticeManagement": "通知公告",
   "CabinetRelated": "橱柜相关",
-  "Quotation": "报价单"
+  "Quotation": "报价单",
+  "PortfolioWeb": "工程案例"
 }
