--- a/src/locales/menu/zh-CN.json
+++ b/src/locales/menu/zh-CN.json
@@ -27,5 +27,6 @@
   "NoticeManagement": "通知公告",
   "CabinetRelated": "橱柜相关",
   "Quotation": "报价单",
-  "PortfolioWeb": "工程案例"
+  "PortfolioWeb": "工程案例",
+  "NewsInformation": "新闻资讯"
 }
