Message board .end

--- a/src/locales/menu/zh-CN.json
+++ b/src/locales/menu/zh-CN.json
@@ -28,5 +28,6 @@
   "CabinetRelated": "橱柜相关",
   "Quotation": "报价单",
   "PortfolioWeb": "工程案例",
-  "NewsInformation": "新闻资讯"
+  "NewsInformation": "新闻资讯",
+  "MessageBoard": "留言板"
 }
