--- a/src/locales/menu/zh-CN.json
+++ b/src/locales/menu/zh-CN.json
@@ -29,5 +29,6 @@
   "Quotation": "报价单",
   "PortfolioWeb": "工程案例",
   "NewsInformation": "新闻资讯",
-  "MessageBoard": "留言板"
+  "MessageBoard": "留言板",
+  "WorkArrangement": "代办事项"
 }
