--- a/src/locales/menu/zh-CN.json
+++ b/src/locales/menu/zh-CN.json
@@ -30,5 +30,6 @@
   "PortfolioWeb": "工程案例",
   "NewsInformation": "新闻资讯",
   "MessageBoard": "留言板",
-  "WorkArrangement": "代办事项"
+  "WorkArrangement": "代办事项",
+  "OrderStatus": "订单状态"
 }
